--- a/app/views/v1/index.html
+++ b/app/views/v1/index.html
@@ -1,7 +1,7 @@
 fary {% extends "layout.html" %}
 
 {% block pageTitle %}
-Remote education review framework
+Review your remote education provision
 {% endblock %}
 
 {% block header %}
@@ -18,14 +18,14 @@ Remote education review framework
       {% if serviceName %} {{ serviceName }} {% endif %}
     </h1>
 
+    <p>This service has been produced to support schools and colleges in England to identify the strengths and areas for improvement in their remote education provision. It provides links to guidance and resources to help you improve your provision.</p>
 
     <p>Use this service to:</p>
 
     <ul class="govuk-list govuk-list--bullet">
-      <li>identify the strengths and areas for improvement in your school or college's remote education provision</li>
+      <li>review and improve your school or college's remote education provision</li>
       <li>understand how to meet basic requirements using the resources and tools you currently have</li>
       <li>support detailed discussions on appropriate next steps</li>
-      <li>discover resources to help improve your remote education provision</li>
     </ul>
 
     <br>
@@ -36,6 +36,19 @@ Remote education review framework
         <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
       </svg>
     </a>
+
+
+<h2 class="govuk-heading-m">
+Before you start
+</h2>
+
+<p>This framework is for:</p>
+<ul class="govuk-list govuk-list--bullet">
+  <li>MAT leaders</li>
+  <li>schools leaders</li>
+  <li>governors</li>
+  <li>senior leaders in FE providers (including colleges, sixth from providers and independent training providers)</li>
+</ul>
 
 
   </div>
