--- a/app/views/v1/schools/task-list.html
+++ b/app/views/v1/schools/task-list.html
@@ -16,8 +16,8 @@ Task list
       Remote education review framework
     </h1>
 
-    <p>The categories below provide a structure to identify the current position of your remote education provision. Assessing each category will help you to identify areas of strength and those needing further work.</p>
-
+    <p>The categories below provide a structure to identify the current position of your remote education provision. You can work through the entire framework to identify strengths and areas for improvement with your senior leadership team or focus on specific sections that have been previously identified as priorities.</p>
+    <p>The framework is not intended as a compliance or accountability tool. It is not statutory, and schools and colleges can adapt it to fit their context. The framework differs from the <a href="https://www.gov.uk/government/publications/providing-remote-education-information-to-parents-template">remote education template</a>, which is a high-level summary of remote education provision for parents, carers and pupils.</p>
 
     {%
       if data['leadership_monitoring-and-evaluating'] or data['recpe_pdsl']
