--- a/app/views/v1/schools/summary.html
+++ b/app/views/v1/schools/summary.html
@@ -16,7 +16,7 @@ Task list
       What the remote education review framework is
     </h1>
 
-    <p>From 5 January 2021, all schools and colleges are required to close to most pupils and students. Whilst vulnerable pupils and students, and the children of key workers, can continue to be educated in person, DfE expects schools and colleges to immediately offer all other pupils and students access to remote education.</p>
+    <!-- <p>From 5 January 2021, all schools and colleges are required to close to most pupils and students. Whilst vulnerable pupils and students, and the children of key workers, can continue to be educated in person, DfE expects schools and colleges to immediately offer all other pupils and students access to remote education.</p> -->
 
     <p>The framework has been produced to support schools and colleges in England to identify the strengths and areas for improvement in their remote education provision. It provides links to guidance and resources to help you improve your provision.</p>
 
