--- a/app/views/index.html
+++ b/app/views/index.html
@@ -21,6 +21,34 @@
       <p><a href="v1">version 1</a></p>
       <br><br>
 
+      <h2 class="govuk-heading-m">
+        Change log
+      </h2>
+      <table class="govuk-table">
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th class="govuk-table__header" scope="col">Date</th>
+            <th class="govuk-table__header" scope="col">Comments</th>
+            <th class="govuk-table__header" scope="col" style="width:7em">Link</th>
+          </tr>
+        </thead>
+
+        <tbody class="govuk-table__body">
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell">18/01/21</td>
+            <td class="govuk-table__cell">Split out 'primary' and 'secondary' on education stage question; added 'help with scoring' column to 'check your answers' pages</td>
+            <td class="govuk-table__cell"><a href="v2">Version 2</a></td>
+          </tr>
+        </tbody>
+        <tbody class="govuk-table__body">
+          <tr class="govuk-table__row">
+            <td class="govuk-table__cell">11/12/20</td>
+            <td class="govuk-table__cell">Initial version created for first round of user testing</td>
+            <td class="govuk-table__cell"><a href="v1">Version 1</a></td>
+          </tr>
+        </tbody>
+      </table>
+
 
 
     </div>
