--- a/app/views/v2/fe/recommendations_section.html
+++ b/app/views/v2/fe/recommendations_section.html
@@ -21,10 +21,10 @@ Scores and recommendations
 
     <p>Based on the scores you have given so far, you could consider the following recommendations to improve your remote education provision.</p>
 
-    <p><a href="recommendations_print" class="govuk-button govuk-button--secondary">Print a copy of your recommendations</a>
-      <br>
-    <a href="task-list" class="govuk-button">
-        Return to category overview</a></p>
+    <p>
+      <a href="task-list" class="govuk-button">
+        Return to category overview</a>
+    </p>
 
   </div>
 
@@ -32,8 +32,6 @@ Scores and recommendations
 
   <div class="govuk-grid-column-full">
 
-
-    <div>
 
 
       <div>
@@ -389,8 +387,6 @@ Scores and recommendations
         </div>
       </div>
 
-
-    </div>
 
 
   </div>
