--- a/app/views/v2/schools/communication-answers.html
+++ b/app/views/v2/schools/communication-answers.html
@@ -52,7 +52,7 @@ Question page
     <p>Once you're happy with your scores, you can get recommendations on how to improve your remote education provision.</p>
     <br>
 
-    <form action="recommendations" method="post" novalidate>
+    <form action="recommendations-single-section" method="post" novalidate>
       <input type="hidden" name="answers-checked" value="true">
       <input type="hidden" name="referrer" value="communication">
       <button type="submit" class="govuk-button" data-module="govuk-button">
@@ -65,7 +65,7 @@ Question page
 
   <div class="govuk-grid-column-one-third">
     {% include "v2/schools/scoring_aside.html" %}
-  </div>    
+  </div>
 
 
 </div>
