Updates to single section Recommendation page, FE

--- a/app/views/v2/fe/capacity-answers.html
+++ b/app/views/v2/fe/capacity-answers.html
@@ -66,7 +66,7 @@ Question page
     <p>Once you're happy with your scores, you can get recommendations on how to improve your remote education provision.</p>
     <br>
 
-    <form action="recommendations" method="post" novalidate>
+    <form action="recommendations-single-section" method="post" novalidate>
       <input type="hidden" name="answers-checked" value="true">
       <button type="submit" class="govuk-button" data-module="govuk-button">
         Get recommendations
@@ -79,7 +79,7 @@ Question page
 
   <div class="govuk-grid-column-one-third">
     {% include "v2/fe/scoring_aside.html" %}
-  </div>  
+  </div>
 
 </div>
 
