--- a/app/views/v2/fe/recommendations-single-section.html
+++ b/app/views/v2/fe/recommendations-single-section.html
@@ -33,70 +33,51 @@ Scores and recommendations
   <div class="govuk-grid-column-full">
 
 
-
-      <div>
-        <div>
+  {% if data['referrer'] == 'leadership' %}
           <h2 class="govuk-heading-l">
-            <span>
               Leadership
-            </span>
           </h2>
-        </div>
-        <div>
 
-          {% if data['leadership_remote-ed-plan'] == null %}
-          <p class='govuk-body'>You haven't yet given any scores for this section. Complete your <a href="task-list">outstanding categories</a></p>
-          {% else %}
-            <div class="statement-block">
-              <h3 class="govuk-heading-m">You scored {{ data['leadership_remote-ed-plan'] }} for remote education plan:</h3>
-              {% if data['leadership_remote-ed-plan'] < 3 %}
-              <p>To help develop your remote education plan, The EdTech Demonstrator Programme provides several resources to support schools and colleges in their remote education provision. This includes <a href="https://edtech-demonstrator.lgfl.net/guidance/contingency">short videos</a> developed by schools and colleges on developing remote education plans, <a href="https://edtech-demonstrator.lgfl.net/guidance/contingency">contingency planning guidance</a> and <a href="https://edtech-demonstrator.lgfl.net/guidance/strategy">guidance</a> on how  to embed digital technology to support remote education</p>
-              <p>GOV.UK provides guidance on the <a href="https://www.gov.uk/government/publications/coronavirus-covid-19-maintaining-further-education-provision#expectations-for-education-provided-remotely">expectations for education provided remotely</a>.</p>
-              {% else %}
-                <p>You have no recommendations in this category as you scored 3 or above</p>
-              {% endif %}
-            </div>
-
-            <div class="statement-block">
-              <h3 class="govuk-heading-m">You scored {{ data['leadership_communication'] }} for communication:</h3>
-              {% if data['leadership_communication'] < 3 %}
-                <p>Ensure governors, staff and parents and carers are aware of the college’s remote education provision by maintaining regular communication using face-to-face and virtual meetings and providing updates on any changes to the provision.</p>
-              {% else %}
-                <p>You have no recommendations in this category as you scored 3 or above</p>
-              {% endif %}
-            </div>
-
-            <div class="statement-block">
-              <h3 class="govuk-heading-m">You scored {{ data['leadership_monitoring-and-evaluating'] }} for monitoring and evaluation:</h3>
-              {% if data['leadership_monitoring-and-evaluating'] < 3 %}
-                <p>GOV.UK provides guidance on:</p>
-                <ul class="govuk-list govuk-list--bullet">
-                  <li>the college <a href="https://www.gov.uk/government/publications/coronavirus-covid-19-maintaining-further-education-provision#workforce">workforce</a>, including guidance on how to support staff and recruitment</li>
-                  <li>how to monitor and manage attendance as part of the <a href="https://www.gov.uk/government/publications/coronavirus-covid-19-maintaining-further-education-provision#expectations-for-education-provided-remotely">expectations for education provided remotely</a></li>
-                </ul>
-                {% else %}
-                  <p>You have no recommendations in this category as you scored 3 or above</p>
-                {% endif %}
-            </div>
+          <div class="statement-block">
+            <h3 class="govuk-heading-m">You scored {{ data['leadership_remote-ed-plan'] }} for remote education plan:</h3>
+            {% if data['leadership_remote-ed-plan'] < 3 %}
+            <p>To help develop your remote education plan, The EdTech Demonstrator Programme provides several resources to support schools and colleges in their remote education provision. This includes <a href="https://edtech-demonstrator.lgfl.net/guidance/contingency">short videos</a> developed by schools and colleges on developing remote education plans, <a href="https://edtech-demonstrator.lgfl.net/guidance/contingency">contingency planning guidance</a> and <a href="https://edtech-demonstrator.lgfl.net/guidance/strategy">guidance</a> on how  to embed digital technology to support remote education</p>
+            <p>GOV.UK provides guidance on the <a href="https://www.gov.uk/government/publications/coronavirus-covid-19-maintaining-further-education-provision#expectations-for-education-provided-remotely">expectations for education provided remotely</a>.</p>
+            {% else %}
+              <p>You have no recommendations in this category as you scored 3 or above</p>
             {% endif %}
+          </div>
 
-        </div>
-      </div>
+          <div class="statement-block">
+            <h3 class="govuk-heading-m">You scored {{ data['leadership_communication'] }} for communication:</h3>
+            {% if data['leadership_communication'] < 3 %}
+              <p>Ensure governors, staff and parents and carers are aware of the college’s remote education provision by maintaining regular communication using face-to-face and virtual meetings and providing updates on any changes to the provision.</p>
+            {% else %}
+              <p>You have no recommendations in this category as you scored 3 or above</p>
+            {% endif %}
+          </div>
+
+          <div class="statement-block">
+            <h3 class="govuk-heading-m">You scored {{ data['leadership_monitoring-and-evaluating'] }} for monitoring and evaluation:</h3>
+            {% if data['leadership_monitoring-and-evaluating'] < 3 %}
+              <p>GOV.UK provides guidance on:</p>
+              <ul class="govuk-list govuk-list--bullet">
+                <li>the college <a href="https://www.gov.uk/government/publications/coronavirus-covid-19-maintaining-further-education-provision#workforce">workforce</a>, including guidance on how to support staff and recruitment</li>
+                <li>how to monitor and manage attendance as part of the <a href="https://www.gov.uk/government/publications/coronavirus-covid-19-maintaining-further-education-provision#expectations-for-education-provided-remotely">expectations for education provided remotely</a></li>
+              </ul>
+              {% else %}
+                <p>You have no recommendations in this category as you scored 3 or above</p>
+              {% endif %}
+          </div>
+  {% endif %}
 
 
 
-      <div>
-        <div>
+
+  {% if data['referrer'] == 'recpe' %}
           <h2 class="govuk-heading-l">
-            <span>
               Remote education context and student engagement
-            </span>
           </h2>
-        </div>
-        <div>
-          {% if data['recpe_laptops-tablets'] == null %}
-          <p class='govuk-body'>You haven't yet given any scores for this section. Complete your <a href="task-list">outstanding categories</a></p>
-          {% else %}
 
             <div class="statement-block">
               <h3 class="govuk-heading-m">You scored {{ data['recpe_home-environment'] }} for home environment:</h3>
@@ -144,25 +125,16 @@ Scores and recommendations
                 <p>You have no recommendations in this category as you scored 3 or above</p>
               {% endif %}
             </div>
-
-          {% endif %}
-        </div>
-      </div>
+  {% endif %}
 
 
-      <div>
-        <div>
+
+
+
+  {% if data['referrer'] == 'curriculum' %}
           <h2 class="govuk-heading-l">
-            <span>
               Curriculum planning and delivery
-            </span>
           </h2>
-        </div>
-        <div>
-          {% if data['curriculum_minimum-provision'] == null %}
-          <p class='govuk-body'>You haven't yet given any scores for this section. Complete your <a href="task-list">outstanding categories</a></p>
-          {% else %}
-
 
             <div class="statement-block">
               <h3 class="govuk-heading-m">You scored {{ data['curriculum_minimum-provision'] }} for minimum provision:</h3>
@@ -212,121 +184,92 @@ Scores and recommendations
                 <p>You have no recommendations in this category as you scored 3 or above</p>
               {% endif %}
             </div>
+  {% endif %}
 
 
-          {% endif %}
-        </div>
-      </div>
 
 
-      <div>
-        <div>
+
+  {% if data['referrer'] == 'capacity' %}
           <h2 class="govuk-heading-l">
-            <span>
               Capacity and capability
-            </span>
           </h2>
-        </div>
-        <div>
-          {% if data['capacity-capability_effective-practice'] == null %}
-            <p class='govuk-body'>You haven't yet given any scores for this section. Complete your <a href="task-list">outstanding categories</a></p>
-          {% else %}
 
-            <div class="statement-block">
-              <h3 class="govuk-heading-m">You scored {{ data['capacity-capability_effective-practice'] }} for effective practice:</h3>
-              {% if data['capacity-capability_effective-practice'] < 3 %}
-              <p>GOV.UK provides <a href="https://www.gov.uk/government/publications/coronavirus-covid-19-maintaining-further-education-provision#main-changes-to-previous-guidance">Further education operational guidance</a>.</p>
-              {% else %}
-                <p>You have no recommendations in this category as you scored 3 or above</p>
-              {% endif %}
-            </div>
+          <div class="statement-block">
+            <h3 class="govuk-heading-m">You scored {{ data['capacity-capability_effective-practice'] }} for effective practice:</h3>
+            {% if data['capacity-capability_effective-practice'] < 3 %}
+            <p>GOV.UK provides <a href="https://www.gov.uk/government/publications/coronavirus-covid-19-maintaining-further-education-provision#main-changes-to-previous-guidance">Further education operational guidance</a>.</p>
+            {% else %}
+              <p>You have no recommendations in this category as you scored 3 or above</p>
+            {% endif %}
+          </div>
 
-            <div class="statement-block">
-              <h3 class="govuk-heading-m">You scored {{ data['capacity-capability_staff-capability'] }} for staff capability and confidence:</h3>
-              {% if data['capacity-capability_staff-capability'] < 3 %}
-              <p>The Education and Training Foundation's <a href="https://enhance.etfoundation.co.uk/eds">essential digital skills professional development programme</a> can help teachers develop their digital skills. The online learning modules include topics on using devices, handling information and staying safe online.</p>
-              <p>The <a href="https://edtech-demonstrator.lgfl.net/">EdTech Demonstrator Programme</a> provides advice, guidance and practical support for teachers on how to deliver good remote education. This includes guidance on <a href="https://edtech-demonstrator.lgfl.net/guidance">how to use online platforms and resources</a>, including for students with SEND.</p>
-              <p><a href="https://www.rnibbookshare.org/cms/">RNIB Bookshare</a>, which was established through DfE’s pilot load2learn, is providing on-demand access to over 350,000 accessible digital books for schools, colleges and universities, free for any student with a <a href="https://www.rnibbookshare.org/cms/bookshare-me/who-qualifies">print disability</a>.</p>
-              <p><a href="https://pdnet.org.uk/">pdnet</a> provides free <a href="https://pdnet.org.uk/meetings-and-conferences/">training events</a> for teachers and professionals on augmentative and alternative communication technology to support students with SEND.</p>
-              {% else %}
-                <p>You have no recommendations in this category as you scored 3 or above</p>
-              {% endif %}
-            </div>
+          <div class="statement-block">
+            <h3 class="govuk-heading-m">You scored {{ data['capacity-capability_staff-capability'] }} for staff capability and confidence:</h3>
+            {% if data['capacity-capability_staff-capability'] < 3 %}
+            <p>The Education and Training Foundation's <a href="https://enhance.etfoundation.co.uk/eds">essential digital skills professional development programme</a> can help teachers develop their digital skills. The online learning modules include topics on using devices, handling information and staying safe online.</p>
+            <p>The <a href="https://edtech-demonstrator.lgfl.net/">EdTech Demonstrator Programme</a> provides advice, guidance and practical support for teachers on how to deliver good remote education. This includes guidance on <a href="https://edtech-demonstrator.lgfl.net/guidance">how to use online platforms and resources</a>, including for students with SEND.</p>
+            <p><a href="https://www.rnibbookshare.org/cms/">RNIB Bookshare</a>, which was established through DfE’s pilot load2learn, is providing on-demand access to over 350,000 accessible digital books for schools, colleges and universities, free for any student with a <a href="https://www.rnibbookshare.org/cms/bookshare-me/who-qualifies">print disability</a>.</p>
+            <p><a href="https://pdnet.org.uk/">pdnet</a> provides free <a href="https://pdnet.org.uk/meetings-and-conferences/">training events</a> for teachers and professionals on augmentative and alternative communication technology to support students with SEND.</p>
+            {% else %}
+              <p>You have no recommendations in this category as you scored 3 or above</p>
+            {% endif %}
+          </div>
 
-            <div class="statement-block">
-              <h3 class="govuk-heading-m">You scored {{ data['capacity-capability_strategic-partnerships'] }} for strategic partnerships:</h3>
-              {% if data['capacity-capability_strategic-partnerships'] < 3 %}
+          <div class="statement-block">
+            <h3 class="govuk-heading-m">You scored {{ data['capacity-capability_strategic-partnerships'] }} for strategic partnerships:</h3>
+            {% if data['capacity-capability_strategic-partnerships'] < 3 %}
 
-              {% else %}
-                <p>You have no recommendations in this category as you scored 3 or above</p>
-              {% endif %}
-            </div>
+            {% else %}
+              <p>You have no recommendations in this category as you scored 3 or above</p>
+            {% endif %}
+          </div>
+  {% endif %}
 
 
-          {% endif %}
-        </div>
-      </div>
 
 
-      <div>
-        <div>
+
+  {% if data['referrer'] == 'communication' %}
           <h2 class="govuk-heading-l">
-            <span>
               Communication and partnership working
-            </span>
           </h2>
-        </div>
-        <div>
-          {% if data['communication_realistic-expectations'] == null %}
-            <p class='govuk-body'>You haven't yet given any scores for this section. Complete your <a href="task-list">outstanding categories</a></p>
-          {% else %}
 
+          <div class="statement-block">
+            <h3 class="govuk-heading-m">You scored {{ data['communication_realistic-expectations'] }} for realistic expectations of students, parents and carers:</h3>
+            {% if data['communication_realistic-expectations'] < 3 %}
+            <p>GOV.UK provides guidance for FE providers on the <a href="https://www.gov.uk/government/publications/coronavirus-covid-19-maintaining-further-education-provision#expectations-for-education-provided-remotely">expectations for education provided remotely</a>.</p>
+            {% else %}
+              <p>You have no recommendations in this category as you scored 3 or above</p>
+            {% endif %}
+          </div>
 
-            <div class="statement-block">
-              <h3 class="govuk-heading-m">You scored {{ data['communication_realistic-expectations'] }} for realistic expectations of students, parents and carers:</h3>
-              {% if data['communication_realistic-expectations'] < 3 %}
-              <p>GOV.UK provides guidance for FE providers on the <a href="https://www.gov.uk/government/publications/coronavirus-covid-19-maintaining-further-education-provision#expectations-for-education-provided-remotely">expectations for education provided remotely</a>.</p>
-              {% else %}
-                <p>You have no recommendations in this category as you scored 3 or above</p>
-              {% endif %}
-            </div>
+          <div class="statement-block">
+            <h3 class="govuk-heading-m">You scored {{ data['communication_community-events'] }} for college community events:</h3>
+            {% if data['communication_community-events'] < 3 %}
 
-            <div class="statement-block">
-              <h3 class="govuk-heading-m">You scored {{ data['communication_community-events'] }} for college community events:</h3>
-              {% if data['communication_community-events'] < 3 %}
+            {% else %}
+              <p>You have no recommendations in this category as you scored 3 or above</p>
+            {% endif %}
+          </div>
 
-              {% else %}
-                <p>You have no recommendations in this category as you scored 3 or above</p>
-              {% endif %}
-            </div>
+          <div class="statement-block">
+            <h3 class="govuk-heading-m">You scored {{ data['communication_employer-partnerships'] }} for employer partnerships:</h3>
+            {% if data['communication_community-events'] < 3 %}
 
-            <div class="statement-block">
-              <h3 class="govuk-heading-m">You scored {{ data['communication_employer-partnerships'] }} for employer partnerships:</h3>
-              {% if data['communication_community-events'] < 3 %}
-
-              {% else %}
-                <p>You have no recommendations in this category as you scored 3 or above</p>
-              {% endif %}
-            </div>
-
-          {% endif %}
-        </div>
-      </div>
+            {% else %}
+              <p>You have no recommendations in this category as you scored 3 or above</p>
+            {% endif %}
+          </div>
+  {% endif %}
 
 
 
-      <div>
-        <div>
+
+  {% if data['referrer'] == 'safeguarding' %}
           <h2 class="govuk-heading-l">
-            <span>
               Safeguarding and wellbeing
-            </span>
           </h2>
-        </div>
-        <div>
-          {% if data['safeguarding_ensuring-safety'] == null %}
-            <p class='govuk-body'>You haven't yet given any scores for this section. Complete your <a href="task-list">outstanding categories</a></p>
-          {% else %}
 
             <div class="statement-block">
               <h3 class="govuk-heading-m">You scored {{ data['safeguarding_ensuring-safety'] }} for ensuring safety:</h3>
@@ -382,10 +325,7 @@ Scores and recommendations
                 <p>You have no recommendations in this category as you scored 3 or above</p>
               {% endif %}
             </div>
-
-          {% endif %}
-        </div>
-      </div>
+  {% endif %}
 
 
 
